src/test/resources/semantic/custom/reject/variableHideParam.ul
void main() {
}

void foo(int one, float two) {
    int two;
}
